WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315148
Possible WebPreferences null deref under PageClientImpl::didCommitLoadForMainFrame() during WKWebView dealloc
https://bugs.webkit.org/show_bug.cgi?id=315148
Summary
Possible WebPreferences null deref under PageClientImpl::didCommitLoadForMain...
Abrar Rahman Protyasha
Reported
2026-05-19 17:19:18 PDT
rdar://177270748
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-19 17:35:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65244
EWS
Comment 2
2026-05-20 00:48:54 PDT
Committed
313555@main
(69d300842d37): <
https://commits.webkit.org/313555@main
> Reviewed commits have been landed. Closing PR #65244 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug